WIP: fix the spacing of the dashboard and overview header

--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -3,7 +3,7 @@
   align-items: flex-end;
   justify-content: space-between;
   border-bottom: 2px solid var(--primary-color);
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
 }
 
 .nav-links-list {
@@ -12,7 +12,7 @@
 }
 
 .nav-link {
-  padding: .3rem .5rem;
+  padding: .5rem .75rem;
   color: var(--text-color);
   text-decoration: none;
   border-radius: var(--radius) var(--radius) 0 0;
