--- a/src/app/pages/dashboard/paintings-overview/paintings-overview.scss
+++ b/src/app/pages/dashboard/paintings-overview/paintings-overview.scss
@@ -1,6 +1,7 @@
 .overview-header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   margin-bottom: 1rem;
 
   p:first-child {
